feat: add cobalt multimode client delivery
